namespace Sunnyyssh.ConsoleUI;

public class RowChooser //: OptionChooser
{
    
}